--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+</head>
+<body>
+    <div class="main">
+        <header>
+            <div class="conection">
+                <div class="headerEmail"></div>
+                <div class="headerPhone"></div>
+                <div class="headerLanguage"></div>
+            </div>
+            <div class="headerBottom">
+                <div class="logo"></div>
+                <div class="catalog"></div>
+                <div class="search"></div>
+                <div class="favorite"></div>
+                <div class="basket"></div>
+                <div class="login"></div>
+            </div>
+        </header>
+    </div>
+</body>
+</html>
