do some changes on header

--- a/index.html
+++ b/index.html
@@ -6,23 +6,48 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 <body>
     <div class="main">
         <header>
             <div class="conection">
-                <div class="headerEmail"></div>
-                <div class="headerPhone"></div>
-                <div class="headerLanguage"></div>
+                <div class="headerEmail">
+                    <i class="fa fa-envelope-o"></i>    
+                    <p>info@want.am</p>            
+                </div>
+                <div class="headerPhone">
+                    <i class="fa fa-phone"></i>
+                    <p>094-092-092</p>
+                </div>
+                <div class="headerLanguage">
+                    <i class="fa fa-globe"></i>
+                    <p>AM</p>
+                    <i class="fa fa-chevron-down"></i>
+                </div>
             </div>
             <div class="headerBottom">
-                <div class="logo"></div>
-                <div class="catalog"></div>
-                <div class="search"></div>
-                <div class="favorite"></div>
-                <div class="basket"></div>
-                <div class="login"></div>
+                <div class="logo">
+                    <img src="photo/logo .png" alt="" width="150px" height="40px">
+                </div>
+                <div class="catalog">
+                    <i class="fa fa-chevron-down"></i>
+                </div>
+                <div class="search">
+                    <i class="fa fa-search"></i>
+                    <input type="text" placeholder="Փնտրել նվեր">
+                </div>
+                <div class="favorite">
+                    <i class="fa fa-heart"></i>
+                </div>
+                <div class="basket">
+                    <i class="fa fa-shopping-basket"></i>
+                </div>
+                <div class="login">
+                    <i class="fa fa-user-circle"></i>
+                    <p>Մուտք</p>
+                </div>
             </div>
         </header>
     </div>
