--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <header>
-            <div class="conection">
+            <div class="connection">
                 <div class="headerEmail">
                     <i class="fa fa-envelope-o"></i>    
                     <p>info@want.am</p>            
@@ -32,6 +32,7 @@
                     <img src="photo/logo .png" alt="" width="150px" height="40px">
                 </div>
                 <div class="catalog">
+                    <p>Կատալոգ</p>
                     <i class="fa fa-chevron-down"></i>
                 </div>
                 <div class="search">
