--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
                 </div>
             </div>
         </header>
+        <section class="poster">
+            <div class="categoryItem item1">
+                <img src="photo/harry potter.png" alt="Magic Wand">
+            </div>
+            <div class="categoryItem item2">
+                <img src="photo/ugears.png" alt="Ugears">
+            </div>
+            <div class="categoryItem item3">
+                <img src="photo/observatory.png" alt="Telescope">
+            </div>
+            <div class="categoryItem item4">
+                <img src="photo/lampshade.png" alt="Moon Lamp">
+            </div>
+        </section>
     </div>
 </body>
 </html>
