add html for advantages

--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
                 <img src="photo/lampshade.png" alt="Moon Lamp">
             </div>
         </section>
+        <div class="advantages">
+            <div class="advantage">
+                <img src="photo/advantages1.svg" alt="">
+                <p>Ստանդարտ և էքսպրես առաքում:</p>
+            </div>
+            <div class="advantage">
+                <img src="photo/advantages2.svg" alt="">
+                <p>Կփաթեթավորենք Ձեր նվերը:</p>
+            </div>
+            <div class="advantage">
+                <img src="photo/advantages3.svg" alt="">
+                <p>Չե՞ք կողմնորոշվում։ Ձեռք բերե՜ք մեր նվեր քարտերը։</p>
+            </div>
+            <div class="advantage">
+                <img src="photo/advantages4.svg" alt="">
+                <p>Ապրանքի փոխանակում 14 օրվա ընթացքում։</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
