add html for novelty

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 <p>Ապրանքի փոխանակում 14 օրվա ընթացքում։</p>
             </div>
         </div>
+        <div class="novelty">
+            <h1 class="noveltyFirst">Նորույթ <br><br><hr></h1>
+            <h1 class="noveltySecond">Պահանջված</h1>
+        </div>
     </div>
 </body>
 </html>
