add html for products

--- a/index.html
+++ b/index.html
@@ -87,6 +87,128 @@
             <h1 class="noveltyFirst">Նորույթ <br><br><hr></h1>
             <h1 class="noveltySecond">Պահանջված</h1>
         </div>
+        <div class="products">
+            <div class="product">
+                <img src="photo/product1.webp" alt="">
+                <p>Գրավիտացիոն ժամանակաչափ F4</p>
+                <span>Գադժետներ, Գրասենյակային</span>
+                <h1>12,500 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Առկա չէ</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product2.jpg" alt="">
+                <p>Օդի խոնավեցուցիչ և դիֆուզոր «Մեդուզա»</p>
+                <span>Տան համար</span>
+                <h1>22,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product3.jpg" alt="">
+                <p>Լուսամփոփ «Թռչուններ ծառի վրա»</p>
+                <span>Լուսամփոփներ, Կանանց համար</span>
+                <h1>33,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product4.jpg" alt="">
+                <p>Bluetooth բարձրախոս, լուսամփոփ և ժամացույց ռետրո ոճով</p>
+                <span>Գադժետներ, Ժամացույցներ</span>
+                <h1>21,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product5.png" alt="">
+                <p>Վինիլային նվագարկչի տեսքով բուրավետիչ, բարձրախոս և լուսամփոփ</p>
+                <span>Գադժետներ, Երեխաների համար</span>
+                <h1>18,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product6.webp" alt="">
+                <p>Լիցքավորման սարք-ժամացույց-լուսամփոփ «Calendar»</p>
+                <span>Գադժետներ, Գրասենյակային</span>
+                <h1>18,500 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product7.jpg" alt="">
+                <p>Անլար լիցքավորման սարք և լուսամփոփ</p>
+                <span>Գադժետներ, Գրասենյակային</span>
+                <h1>18,500 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product8.jpg" alt="">
+                <p>Լուսամփոփ, ժամացույց և զարթուցիչ «Տնակ» White Noise համակարգով</p>
+                <span>Գադժետներ, Երեխաների համար</span>
+                <h1>19,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product9.jpg" alt="">
+                <p>Լուսամփոփ White Noise համակարգով և USB լիցքավորման պորտով</p>
+                <span>Գադժետներ, Գրասենյակային</span>
+                <h1>21,500 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product10.avif" alt="">
+                <p>Սեղանի փայտե ժամացույց (միջին)</p>
+                <span>Գադժետներ, Գրասենյակային</span>
+                <h1>7500 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product11.jpg" alt="">
+                <p>Սեղանադիր ժամացույց «Հեծանիվ»</p>
+                <span>Գրասենյակային, Ժամացույցներ</span>
+                <h1>26,900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="photo/product12.webp" alt="">
+                <p>Երաժշտական արկղ «The Beatles»</p>
+                <span>Հոբբի</span>
+                <h1>4900 ֏</h1>
+                <div class="add">
+                    <i class="fa fa-shopping-basket"></i>
+                    <p>Ավելացնել</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
