do some changes

--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                 </div>
             </div>
         </div>
+        <div class="seeMore">
+            Տեսնել ավելին
+        </div>
     </div>
 </body>
 </html>
