--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
         <div class="seeMore">
             Տեսնել ավելին
         </div>
+        <div class="giftBlock">
+            <img src="photo/giftBlock.png" alt="">
+        </div>
+        <div class="discount">Զեղչ</div>
     </div>
 </body>
 </html>
