do some changes

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <img src="photo/giftBlock.png" alt="">
         </div>
         <div class="discount">Զեղչ</div>
+        <div class="giftCallback"><img src="photo/giftCallback.png" alt=""></div>
     </div>
 </body>
 </html>
