add follow block

--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
             <img src="photo/giftBlock.png" alt="">
         </div>
         <div class="discount">Զեղչ</div>
-        <div class="giftCallback"><img src="photo/giftCallback.png" alt=""></div>
+        <div class="giftCallback">
+            <img src="photo/giftCallback.png" alt="">
+        </div>
+        <div class="followBlock">
+            <img src="photo/followBlock.png" alt="">
+        </div>
     </div>
 </body>
 </html>
