--- a/index.html
+++ b/index.html
@@ -222,6 +222,55 @@
         <div class="followBlock">
             <img src="photo/followBlock.png" alt="">
         </div>
+        <footer>
+            <div class="footerTop">
+                <div class="footerTopLeft">
+                    <div class="logo">
+                        <img src="photo/logo .png" alt="" width="150px" height="40px">
+                    </div>                
+                    <p>
+                        Պատվերներն ընդունվում են ժամը 10:00-18:00
+                    </p>
+                    <p>
+                        <i class="fa fa-map-marker"></i>
+                        Երևան, Հյուսիսային պողոտա 6/2, խանութ-սրահը բաց է ժամը 10:00-22:00
+                    </p>
+                    <div class="headerEmail">
+                        <i class="fa fa-envelope-o"></i>    
+                        <p>info@want.am</p>            
+                    </div>         
+                    <div class="headerPhone">
+                        <i class="fa fa-phone"></i>
+                        <p>094-092-092</p>
+                    </div>
+                </div>
+                <div class="footerTopRight">
+                    <div class="social">
+                        <b>Մեր սոցցանցերը</b>
+                        <p>Instagram</p>
+                        <p>Facebook</p>
+                        <p>Telegram</p>
+                        <p>VK (дно)</p>
+                    </div>
+                    <div class="helpfull">
+                        <b>Օգտակար լինքեր</b>
+                        <p>Գաղտնիության քաղաքականություն    </p>
+                        <p>Առաքում</p>
+                        <p>Կոնտակտներ</p>
+                        <p>Яндекс.Навигатор</p>
+                        <p>Google Maps</p>
+                    </div>
+                    <div class="personalPage">
+                        <b>Անձնական էջ</b>
+                        <p>Իմ էջը</p>
+                        <p>Առանձնացված <br> Դրույթներ և պայմաններ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footerBottom">
+                <img src="photo/footer.png" alt="">
+            </div>
+        </footer>
     </div>
 </body>
 </html>
